# backend

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  dependencies.py  main.py  openapi.yaml  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  main.py  repo.py  service.py
app/auth/: dependencies.py  router.py  service.py  utils.py
app/core/: settings.py
app/db/: database.py  session.py
app/models/: __init__.py  base.py  document.py  document_template.py  generated_document.py  generation_process.py  template.py  template_field.py  user.py
app/repositories/: base.py  document_template_repo.py  generated_document_repo.py  generation_process_repo.py  template_field_repo.py  user.py  user_repo.py
app/routers/: authentication.py  document_template.py  generated_document.py  generation_process.py  template_field.py  users.py
app/schemas/: authentication.py  document_template.py  documents.py  generated_document.py  generation_process.py  pagination.py  template_field.py  templates.py  user.py  users.py
app/services/: auth_service.py  base.py  document_template_service.py  generated_document_service.py  generation_process_service.py  template_field_service.py  user.py  user_service.py
app/utils/: repository.py
core/: settings.py
migrations/: README  env.py
migrations/versions/: 10035004045f_restore_timestamp_with_tz_and_onupdate.py  59bab29a333b_initial_tables.py  886a2047c2d9_change_timestamp_to_tz.py  c08e2d85c506_init.py  f70f93a32596_again_fix_updated_at_onupdate.py  f7dd10b4f559_fix_updated_at_onupdate.py
