[project]
name = "digitalizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pydantic-settings>=2.13.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "cachetools>=7.0.5",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "ruff>=0.15.8",
    "types-cachetools>=6.2.0.20260317",
    "types-requests>=2.33.0.20260327",
    "pytest>=9.0.2",
]
